tests/paczka1/fuzzy1/20961121.err
Error in line 2: 4u8 A254 72,7
Error in line 12: A53 S65 28,2
Error in line 5: vUZiDP9ux A272 4,5
Error in line 14: A53 A272 87,6
Error in line 11: s70 A254 53,8
Error in line 19: 4u8 A272 8,9
Error in line 33: 4u8 A254 26,6
Error in line 38: TQct2 A272 154,77
